# T9_UTF-8_RU_EN

./: 7853-russian-words.txt  CMakeLists.txt  README.md
include/: Trie.h
src/: Trie.cpp  main.cpp
